# consistentshade

./: .gitignore  CITATION.cff  README.md  pyproject.toml  stable.ipynb
bcr/: __init__.py  config.py
bcr/metrics/: __init__.py  stability.py
bcr/models/: __init__.py  mlp.py
bcr/optimizers/: __init__.py  sam.py
bcr/regularizers/: __init__.py  bcr.py  ifr.py  kfac.py
bcr/training/: __init__.py  baselines.py  trainer.py
experiments/: __init__.py  datasets.py  generate_tables.py  run_ablation.py  run_comprehensive.py  run_main.py  run_pareto.py  run_sensitivity.py  statistical_analysis.py
ms/: boot.bib  boot.tex
scripts/: config.py  datasets.py  generate_tables.py  metrics.py  models.py  optimizers.py  run_ablation.py  run_main_experiments.py  run_pareto.py  run_sensitivity.py  statistical_analysis.py  utils.py
scripts/trainers/: __init__.py  bagging.py  baseline.py  bcr.py  ifr.py  ifr_kfac.py  rdrop.py  sam.py  weight_decay.py
tabs/: ablation_results.csv  ablation_results.tex  ablation_study.tex  adult_results.csv  california_results.csv  classification_stability.tex  german_results.csv  pareto_california.csv  pareto_synthetic.csv  synthetic_results.csv
tabs/comprehensive/: challenging_scenarios.csv  challenging_scenarios.tex  k_lambda_grid.csv  k_lambda_summary.tex  k_sensitivity.tex  sample_scaling.tex  sample_size_scaling.csv
