[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bcr"
dynamic = ["version"]
description = "Bootstrap Consistency Regularization for stable neural network predictions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Gaurav Sood"}
]
keywords = [
    "machine-learning",
    "deep-learning",
    "pytorch",
    "regularization",
    "stability",
    "bootstrap",
    "ensemble",
    "neural-networks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
experiments = [
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "scipy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/soodoku/bcr"
Repository = "https://github.com/soodoku/bcr"
Issues = "https://github.com/soodoku/bcr/issues"

[tool.setuptools.dynamic]
version = {attr = "bcr._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["bcr*"]

[tool.setuptools.package-data]
bcr = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
